--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     --bgcolor:white;
 }
 body{
-    background-color:var(--bgcolor);
+    background-color:white;
 }
 .btn{
 
@@ -58,14 +58,14 @@ body{
 }
 @media screen and (max-width:600px){
     #code{
-        max-width:300px;
-    }
+      
+       max-width:300px;
+    }   
+    
 }
 
 footer{
     height: 100px;
     text-align:center;
-    margin-top:200px;
+    margin-top:300px;
 }
-
-
